# bitcoin_price_predictor

./: .gitignore  01_data_extractor_alpaca.ipynb  02_lightgmb_kaggle.ipynb  03_training-3rd-place-solution.ipynb  README.md  config.py  environment.yml  feature_engineering.py  my_reqs.yml  pyproject.toml  pytest.ini  requirements.yml  requirements_from_history.yml  setup.py  training.py
.github/workflows/: lint-and-test.yml  pytest.yml  test-and-lint.yml  test.yml
data/: dataset_1.pkl  dataset_2.pkl  nans_c.csv  test_1.pkl  train_1.pkl  train_2.pkl  val_1.pkl  val_2.pkl
deploy/: bitcoin_price_predictor.py  deploy_app.py  deploy_helpers.py  deploy_rough_work.ipynb  uber_pickups.py
download/: market-cap-to-thermocap-ratio.csv  net-unrealized-profit-loss-nupl.csv
models/: basic_LSTM.h5  basic_LSTM_weights.h5  basic_scaler.pkl  model-best-cool-dragon-40.h5  model-best-happy-voice-26.h5
models/pretty-vortex-422/: pretty-vortex-422-model-best.h5
price_predictor/: deploy_app.py  deploy_helpers.py  deploy_rough_work.ipynb  helpers.py  helpers_all_functions.py  helpers_long.py  helpers_short.py  keras_price_predictor.ipynb  keras_price_predictor_06_04_21_onwards.ipynb  keras_price_predictor_2.ipynb  keras_price_predictor_paperspace.ipynb  one_day_window.py  pytorch_price_predictor.ipynb
resources/: sequence_models_tutorial.ipynb
simple_price_predictor/: constants.py  inference.py  inference_helpers.py  inference_helpers_test.py  lstm.ipynb  simple_work.ipynb  train.py  train_helpers.py  train_helpers_test.py
tests/: test_simple_train_helpers.py  test_work.ipynb
(+2 files in other folders)
