[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "bitcoin-price-predictor"
version = "0.1.0"
description = "An end-to-end ML project to predict the price of bitcoin in the near future."
authors = ["Adam Murphy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
black = "^23.11.0"
jupyter = "^1.0.0"
optuna = "^3.4.0"
pytest = "^7.4.3"
streamlit = "^1.28.2"
requests = "^2.31.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
